# translate_linebot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/db/: dbbase.py  session.py
app/models/: message.py
